Fixes:
1. Compatibility changes to work with Wordpress 3.4 beta 2
   * postbody-content width setting changed to auto

2. Default form depth changed to 8, so that no horizontal scrollbars are visible on 1280 screen.

--- a/main/css/wp-pde.dev.css
+++ b/main/css/wp-pde.dev.css
@@ -12,6 +12,7 @@
 }
 
 .toplevel_page_wp_pde #post-body-content {
+  width: auto;
 	margin-right: 200px;
 }
 
